Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27988

QApplication::primaryScreen not returning the correct main display properties

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0 RC 1
    • 5.0.0 Beta 2
    • GUI: Window management
    • None
    • Qt 5.0.0 Beta 2
      Operating System: Microsoft Windows 7 Professional x64 SP1
      Compiler: Microsft Visual Studio 2010 Ultimate SP1
      CPU: Intel Core 2 Duo T6600 2.2GHz
      Memory: 8GB
      Architecture: AMD64/x64
    • 9ae215925159f4e8f1a88fc6691c916eead67539

    Description

      I am running my test from a laptop with a 1366x768 LCD screen, attached to a second LCD screen of 1600x900. The attached screen (1600x900) is set as the "main display in the Screen Resolution dialog on Windows 7.

      When i query the geometry() of the QApplication::primaryScreen I get a width of 1366 and a height of 768, which is not the dimensions of the current "main display".

      Should QApplication::primaryScreen not be returning the properties of the currently set "main display"? (in this case 1600x900)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            polla_tosen@yahoo.com Polla Tosen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes