Fix QApplication::primaryScreen() in Windows

QPlatformInterface::screenAdded() documentation specifies that first
added screen will be the primary screen, so we need to ensure that
the screen Windows reports as the main display gets added first.

Task-number: QTBUG-27988
Change-Id: Ibc17b05a6c37007ff749fb54ab62d47ffa40f8ac
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: 9ae215925159f4e8f1a88fc6691c916eead67539 https://github.com/qt/qtbase/commit/9ae215925159f4e8f1a88fc6691c916eead67539